2014-08-14  Daniel Bates  <dabates@apple.com>

        Preserve editing style for -webkit-tap-highlight-color on all ports that enable ENABLE_TOUCH_EVENTS
        https://bugs.webkit.org/show_bug.cgi?id=135963

        Reviewed by Andy Estes.

        Currently we only preserve the CSS property -webkit-tap-highlight-color during editing operations
        for iOS. Instead we should preserve it for all ports that enable ENABLE_TOUCH_EVENTS as this CSS
        property isn't specific to iOS.

        Also added FIXME comment with regards to the CSS property -webkit-composition-fill-color.

        * editing/EditingStyle.cpp:

2014-08-14  Benjamin Poulain  <benjamin@webkit.org>

        CSS JIT: compile the :empty pseudo class
        https://bugs.webkit.org/show_bug.cgi?id=135958

        Reviewed by Andreas Kling.

        Compile :empty, nothing fancy.

        Tests: fast/selectors/empty-basics.html
               fast/selectors/empty-long-adjacent-backtracking.html
               fast/selectors/empty-adjacent-style-update.html
               fast/selectors/empty-style-update.html

        * cssjit/SelectorCompiler.cpp:
        (WebCore::SelectorCompiler::addPseudoClassType):
        (WebCore::SelectorCompiler::SelectorCodeGenerator::generateElementMatching):
        (WebCore::SelectorCompiler::jumpIfElementIsNotEmpty):
        (WebCore::SelectorCompiler::setElementStyleIsAffectedByEmpty):
        (WebCore::SelectorCompiler::setElementStyleFromContextIsAffectedByEmptyAndUpdateRenderStyleIfNecessary):
        (WebCore::SelectorCompiler::setElementStyleIsAffectedByEmptyAndUpdateRenderStyleIfNecessary):
        (WebCore::SelectorCompiler::SelectorCodeGenerator::generateElementIsEmpty):
        * dom/CharacterData.h:
        (WebCore::CharacterData::dataMemoryOffset):
        * dom/ContainerNode.h:
        (WebCore::ContainerNode::firstChildMemoryOffset):
        * dom/Node.h:
        (WebCore::Node::flagIsText):

2014-08-14  Wenson Hsieh  <wenson_hsieh@apple.com>
